# ffi_napi-to-rust

./: Cargo.toml  README.md  headers.h  package.json  pnpm-lock.yaml
src/: lib.rs
test/: test_dll.mjs
